--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Home</title>
+    <title>ALOOOOHA</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicons -->
     <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="assets/img/icon.png">
-
-    <!-- ************************* CSS Files ************狮**王*素*材*淘*宝*店************* -->
-*
+    <link rel="apple-touch-icon" href="assets/img/icon.png">*
     <!-- Vendor CSS -->
     <link rel="stylesheet" href="assets/css/vendor.css">
 
@@ -1260,7 +1257,7 @@
                 <div class="container-fluid">
                     <div class="row border-top ptb--20">
                         <div class="col-12 text-center">
-                            <p class="copyright-text">Copyright &copy; 2021.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">狮￥王￥素￥材@淘宝店</a></p>
+                            <p class="copyright-text">Copyright &copy; 2025.Company name All rights reserved.</p>
                         </div>
                     </div>
                 </div>
