--- a/shop.html
+++ b/shop.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title></title>
+    <title>ALOOOOHA</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicons -->
@@ -1395,7 +1395,7 @@
                 <div class="container-fluid">
                     <div class="row border-top ptb--20">
                         <div class="col-12 text-center">
-                            <p class="copyright-text">Copyright &copy; 2021.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">狮￥王￥素￥材@淘宝店</a></p>
+                            <p class="copyright-text">Copyright &copy; 2025.Company name All rights reserved.</p>
                         </div>
                     </div>
                 </div>
