修改文件传输方式

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                                 <div class="header__main-inner">
                                     <div class="header__main-left">
                                         <div class="logo">
-                                            <a href="index.html" class="logo--normal">
-                                                <img src="assets/img/logo/logo.png" alt="Logo">
+                                            <a href="index.html" class="logo--normal">ALOOOOHA
+                                                <!-- <img src="assets/img/logo/logo.png" alt="Logo"> -->
                                             </a>
                                         </div>
                                     </div>
