--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicons -->
-    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="assets/img/icon.png">*
+    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="assets/img/favicon.png">*
     <!-- Vendor CSS -->
     <link rel="stylesheet" href="assets/css/vendor.css">
 
@@ -41,8 +41,8 @@
                                 <div class="header__main-inner">
                                     <div class="header__main-left">
                                         <div class="logo">
-                                            <a href="index.html" class="logo--normal">ALOOOOHA
-                                                <!-- <img src="assets/img/logo/logo.png" alt="Logo"> -->
+                                            <a href="index.html" class="logo--normal">
+                                                <img src="assets/img/logo/logo.png" alt="Logo">
                                             </a>
                                         </div>
                                     </div>
