--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicons -->
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
-    <link rel="apple-touch-icon" href="assets/img/favicon.png">*
+    <link rel="apple-touch-icon" href="assets/img/favicon.png">
     <!-- Vendor CSS -->
     <link rel="stylesheet" href="assets/css/vendor.css">
 
